week 5 joint (download problem)

--- a/05_3DPrinting/index.html
+++ b/05_3DPrinting/index.html
@@ -23,17 +23,101 @@
 <xmp style="display:none;">
 <br> 
 
-#### Week 4: Microcontrollers and More Coding
+#### Week 5: 3D Printing and 3D scanning
 
 <html>
-<div class="myDiv" style><h3>Week 4: Microcontrollers and More Coding</h3></div>
+<div class="myDiv" style><h3>Week 5: 3D Printing and 3D scanning</h3></div>
 <div class="vidDiv">
   
-  
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4177.jpg" width= 500px alt = Unwired_Car>
-  
   <div class="myDiv">
-    After building the cardboard car, the car needed some electronics to work
+    <h2>CAD: Joint</h2>
+  </div>
+  
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep1.png" width= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep2.png" width= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+    First, make a sketch of three rectangles with the dimensions shown above. This will be the main body of the joint.
+  </div>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep3.png" width= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep4.png" width= 500px alt = 05_Joint>
+
+
+  <div class="myDiv">
+    Then add another rectangle to the front and use the trim feature above the modify dropdown to make the whole thing one shape. This extension at the front is part of the connector for the joint.
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep5.png" width= 400px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep6.png" width= 400px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep7.png" width= 400px alt = 05_Joint>
+
+  <div class="myDiv">
+    Then extrude this shape 8 mm, Change the viewcube to front, and create a sphere on the thin end of the shape.
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep8.png" width= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep9.png" width= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+    Make the sphere 3.5 mm in diameter and make one on each side of the connector (thin piece of the extrusion).
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep10.png" width= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep11.png" width= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+    Similarly, cut a sphere of 4.5 mm in diameter and place it on the insides of the two prongs of the extrusion. Cut a sphere on both sides.
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep12.png" width= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep13.png" width= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+    Then select the whole body, press 'm' or move/copy in the modify menu, create a copy using the checkbox, and move it over so that the spheres on the connector and the spheres cut into the two prongs are aligned.
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep14.png" width= 400px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep15.png" width= 400px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep17.png" width= 400px alt = 05_Joint>
+
+  <div class="myDiv">
+    Also, make sure the bodies are not touching each other, and use a sketch and extrusion to cut away the problematic material. And <strong>TA - DA!</strong> your joint is finished. You can copy, paste, and move as many of the joints as necessary to make a chain of joints.
+  </div>
+
+  <div class="myDiv">To see the model:<br><br>
+      <a  download href="./Joint_(Repeatable)_v1.stl" download><button><h2>Download my STL file</h2></button> </a>
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep16.png" width= 600px alt = 05_Joint>
+
+  <div class="myDiv">
+    Finally slice your model and get it ready for 3D printing. I used 30% infill, no supports, and Prusa Slicer for MK3S to do my project but feel free to use you own settings. 
+  </div>
+
+  <div class="myDiv">
+    <h2>3D Printing Process</h2>
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4318.JPG" height= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4324.jpg" height= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+    The first picture is one of the first layers and the second one is the formation of the spheres on the connectors.
+  </div>
+
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4327.jpg" height= 500px alt = 05_Joint>
+  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4329.jpg" height= 500px alt = 05_Joint>
+
+  <div class="myDiv">
+   The 3rd picture is when the print is almost done and finally the result of the 3D Printing process can be seen in Picture #4.<br><br> The final print took 18 minutes to fully print. Such a joint cannot be manufactured through subtractive methods either.
+  </div> 
+  <div class="myDiv">
+   <h2> This is how the joint works!</h2>
+  </div>
+  <div><video height="500" controls>
+        <source src="./IMG_4330.mp4" type=video/mp4>
+    </video></div>
+
   </div>
     <img src = "./SaiCar-SchematicHandDrawn.JPG" height= 500px alt = Schematic>
     <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4190.jpg" height= 500px alt = Unwired_Car>
