--- a/index.html
+++ b/index.html
@@ -43,28 +43,31 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-
-      <div class="row">
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 5: 3D Printing & Scanning](./05_3DPrinting/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
       [Broken Link]()
     </div>
   </div>
+<html>
+    <div class="row">
+      <div class="col-sm-4">
+        ![sewing image](./01_intro/sew.png) 
+        [Broken Link]()
+      </div>
+      <div class="col-sm-4">
+        ![sewing image](./01_intro/sew.png) 
+        [Broken Link]()
+      </div>
+      <div class="col-sm-4">
+        ![sewing image](./01_intro/sew.png) 
+        [Broken Link]()
+      </div>
+    </div>
   <p style = "font-size: 400px;">This works?</p>
 </div>
+</html>
 </div>
 
 </xmp>
