--- a/05_3DPrinting/index.html
+++ b/05_3DPrinting/index.html
@@ -85,7 +85,8 @@
   </div>
 
   <div class="myDiv">To see the model:<br><br>
-      <a  download href="./Joint_(Repeatable)_v1.stl" download><button><h2>Download my STL file</h2></button> </a>
+      <a  target = blank href="Joint_(Repeatable)_v2.zip" download><button><h2>Download the STL file</h2></button> </a> <br><br>
+      <h3>Remember to unzip the file first</h3>
   </div>
 
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep16.png" width= 600px alt = 05_Joint>
@@ -118,75 +119,37 @@
         <source src="./IMG_4330.mp4" type=video/mp4>
     </video></div>
 
+  </div><br>
+
+
+
+<div class="myDiv">
+  <h2>3D Scanning </h2>
+</div>
+<div class="vidDiv">
+  <img src="./w5images_Scan/IMG-4288.jpg" height= 500px alt= 05_Scan>
+  <img src="./w5images_Scan/IMG-4286.jpg" height= 500px alt= 05_Scan>
+  <div class="myDiv">
+    I scanned my Ice Cubes Gum box using the RevoPoint Scanner. 
   </div>
-    <img src = "./SaiCar-SchematicHandDrawn.JPG" height= 500px alt = Schematic>
-    <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4190.jpg" height= 500px alt = Unwired_Car>
-  <div class="myDiv">So here is a schematic of the wiring and how the actual electronics look like for the car. The potentiometer turns on and off the motor by sppeding up or slowing down the car/motor. The LEDs are for decoration and can be coded to do many things
-  </div> <br>
-  
-  <div><video height="500" controls>
-        <source src="./IMG2_4235.mp4" type=video/mp4>
-    </video></div>
+  <img src="./w5images_Scan/IMG-4287.jpg" height= 600px alt= 05_Scan>
+  <img src="./w5images_Scan/IMG-4315.jpg" height= 500px alt= 05_Scan>
+  <div class="myDiv">
+    Then, using the studio app, the holes were filled and the last image shows the final product. <br> It is very similar to the box itself! <br> Also I learned that many of the objects need lighting to work with the 3D scanner. Very Dark (Black) objects need tremendous amounts of light for the 3D scanner to pick them. I learned this when attempting to scan my mouse, which just would not scan well, even with a studio light.
+  </div>
+</div><br>
 
-  <div class="myDiv"><h3>The Final Result!</h3></div>
-  <br>
-
-
-
-  <html>
-    <div class="myDiv"><h2><br><strong> Week 4 Code:</strong></h2> <br><h5>This code blinks the light on PWM D13 and also codes the potentiometer to work as a speed dial. It also gives the user on the laptop the ability to see the amount of voltage passing through the potentiometer</h5><br></div><br>
-    <div style="border-width: thick; border-color: black; background-color: beige; text-align: left;">
-    <pre><code class="language-arduino">
-            const int potPin = A0;
-            float potreadings;
-            const int buttonPin = 2;  
-            const int ledPin = 13;
-            int buttonState = 0;
-            void setup() {
-              // put your setup code here, to run once:
-              Serial.begin(9600);</html>
-
-
-<html>
-            // initialize the LED pin as an output:
-              pinMode(ledPin, OUTPUT);
-              // initialize the pushbutton pin as an input:
-              pinMode(buttonPin, INPUT);
-
-
-
-
-               // initialize digital pin LED_BUILTIN as an output.
-              pinMode(13, OUTPUT);
-            }
-
-
-            void loop() {
-              potreadings = analogRead(potPin);
-              float adj_potreadings = potreadings * (5.0 /1023); // remember to put in the decimal with the 5 
-              Serial.println (adj_potreadings);//end of potentiometer and start of LED
-
-
-                digitalWrite(13, HIGH);  // turn the LED on (HIGH is the voltage level)
-              delay(75);                      // wait for a second
-              digitalWrite(13, LOW);   // turn the LED off by making the voltage LOW
-              delay(75);
-
-
-            }
-        </code></pre></html></div></div>
-
-<br><div class="myDiv">
-    <h2>What did I learn?</h2>
-    <br><h5> I learned how to code arduino faster while effectively using the resources provided to me</h5>
+<div class="vidDiv">
+  <div class="myDiv">
+      <h2>What did I learn?</h2><br>
+      <h5> I learned the restrictions of 3D printing and how to use Fusion 360 to print multiple bodies that can move. I also learned when 3D scanning is applicable and when to use, or not use, the tool depending on the size, lighting, and color of the object.</h5><br>
+  </div>
+<br>
+  <div class="myDiv">
+      <h2>What can I do better next time?</h2><br>
+      <h5>Next time I make a joint, I should fillet the edges for smoother movement. </h5><br>
+  </div>
 </div>
-<div class="vidDiv"><img src = "./picforfunWeek4.jpg" height=500px alt=arduinopic+programming></div>
-Image Source: https://circuitdigest.com/article/getting-started-with-arduino-programming-using-arduino-ide 
-
-
-</code>
-</div>
-</html>
 </xmp>
 
 
