smoll look change for motivation

--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      <div><img src = "https://cdn-icons-png.flaticon.com/512/2813/2813371.png"  height=240px  alt=LASERCUTIMG ></div>
       [Week 2: CAD and Laser Cutter](./02_CAD/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      <div><img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/02_CAD/PressFitCircle/IMG-4180.jpg"  height=240px  alt=MYFINALSCULPTURE ></div> 
       [Week 3: Kinetic Sculptures](./03_Kinetics/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      <div><img src = "https://assets.bitdegree.org/online-learning-platforms/storage/media/2019/10/What-is-Arduino-Language.jpg"  height=240px  alt=CODINGC++IMG ></div>
       [Week 4: Coding the Kinetic Sculptures](./04_ArduinoIntro/index.html)
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
+      <div><img src = "https://www.cadcam-e.com/admin/blogimages/printer-1248284_960_720.png"  height=240px  alt=3DPRINTINGIMG ></div>
       [Week 5: 3D Printing & Scanning](./05_3DPrinting/index.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Week 6: Electronic Inputs](./06_E-Input/index.html)
     </div>
   </div>
 <html>
     <div class="row">
       <div class="col-sm-4">
         ![sewing image](./01_intro/sew.png) 
-        [Broken Link]()
+        [Week 7: Electronic Outputs](./07_E-Output/index.html)
       </div>
       <div class="col-sm-4">
         ![sewing image](./01_intro/sew.png) 
