right before class

--- a/06_E-Input/index.html
+++ b/06_E-Input/index.html
@@ -48,6 +48,14 @@
     Add graphs and schematic of just sensor and LCD
   </div>
 
+ <div><video height="500" controls>
+        <source src="./IMG_4432.mp4" type=video/mp4>
+    </video></div>
+
+  <div class="myDiv">
+    And also this video
+  </div>
+
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4466.jpg" width= 400px alt = 05_Joint>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4469.jpg" width= 400px alt = 05_Joint>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4471.jpg" width= 400px alt = 05_Joint>
@@ -65,66 +73,9 @@
     Explain which pins are connected to what
   </div>
 
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep9.png" width= 500px alt = 05_Joint>
-
-  <div class="myDiv">
-    Also, make sure the bodies are not touching each other, and use a sketch and extrusion to cut away the problematic material. And <strong>TA - DA!</strong> your joint is finished. You can copy, paste, and move as many of the joints as necessary to make a chain of joints.
-  </div>
-
-  <div class="myDiv">To see the model:<br><br>
-      <a  target = blank href="Joint_(Repeatable)_v2.zip" download><button><h2>Download the STL file</h2></button> </a> <br><br>
-      <h3>Remember to unzip the file first</h3>
-  </div>
-
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep16.png" width= 600px alt = 05_Joint>
-
-  <div class="myDiv">
-    Finally slice your model and get it ready for 3D printing. I used 30% infill, no supports, and Prusa Slicer for MK3S to do my project but feel free to use you own settings. 
-  </div>
-
-  <div class="myDiv">
-    <h2>3D Printing Process</h2>
-  </div>
-
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4318.JPG" height= 500px alt = 05_Joint>
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4324.jpg" height= 500px alt = 05_Joint>
-
-  <div class="myDiv">
-    The first picture is one of the first layers and the second one is the formation of the spheres on the connectors.
-  </div>
-
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4327.jpg" height= 500px alt = 05_Joint>
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/IMG-4329.jpg" height= 500px alt = 05_Joint>
-
-  <div class="myDiv">
-   The 3rd picture is when the print is almost done and finally the result of the 3D Printing process can be seen in Picture #4.<br><br> The final print took 18 minutes to fully print. Such a joint cannot be manufactured through subtractive methods either.
-  </div> 
-  <div class="myDiv">
-   <h2> This is how the joint works!</h2>
-  </div>
-  <div><video height="500" controls>
-        <source src="./IMG2_4417.mp4" type=video/mp4>
-    </video></div>
-
   </div><br>
 
 
-
-<div class="myDiv">
-  <h2>3D Scanning </h2>
-</div>
-<div class="vidDiv">
-  <img src="./w5images_Scan/IMG-4288.jpg" height= 500px alt= 05_Scan>
-  <img src="./w5images_Scan/IMG-4286.jpg" height= 500px alt= 05_Scan>
-  <div class="myDiv">
-    I scanned my Ice Cubes Gum box using the RevoPoint Scanner. 
-  </div>
-  <img src="./w5images_Scan/IMG-4287.jpg" height= 600px alt= 05_Scan>
-  <img src="./w5images_Scan/IMG-4315.jpg" height= 500px alt= 05_Scan>
-  <div class="myDiv">
-    Then, using the studio app, the holes were filled and the last image shows the final product. <br> It is very similar to the box itself! <br> Also I learned that many of the objects need lighting to work with the 3D scanner. Very Dark (Black) objects need tremendous amounts of light for the 3D scanner to pick them. I learned this when attempting to scan my mouse, which just would not scan well, even with a studio light.
-  </div>
-</div><br>
 
 <div class="vidDiv">
   <div class="myDiv">
