--- a/07_E-Output/index.html
+++ b/07_E-Output/index.html
@@ -52,7 +52,8 @@
     </video></div>
 
   <div class="myDiv">
-  Oscilloscope 
+  Oscilloscope:<br>
+  In this video, the buzzer oscillating every 1000 ms (or 1 second) was vibrating at a speed of 100 Hz as set by the code. THe oscilloscope sjows almost the exact same thing with 100.706 Hz. The buzzer was receiving 0.5 - 1 Volts and had waves where each wavelength was completed in 10 ms.
   </div>
 
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep8.png" width= 500px alt = 05_Joint>
