--- a/07_E-Output/index.html
+++ b/07_E-Output/index.html
@@ -469,7 +469,7 @@
    <h2> This is how the joint works!</h2>
   </div>
   <div><video height="500" controls>
-        <source src="./IMG_4411.mp4" type=video/mp4>
+        <source src="./IMG2_4433.mp4" type=video/mp4>
     </video></div>
 
   </div><br>
