--- a/07_E-Output/index.html
+++ b/07_E-Output/index.html
@@ -33,6 +33,11 @@
     <h2>CAD: Joint</h2>
   </div>
   
+
+  <div><video height="500" controls>
+        <source src="./IMG2_4433.mp4" type=video/mp4>
+    </video></div>
+    
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep1.png" width= 500px alt = 05_Joint>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep2.png" width= 500px alt = 05_Joint>
 
