--- a/06_E-Input/index.html
+++ b/06_E-Input/index.html
@@ -57,7 +57,7 @@
     </video></div>
 
   <div class="myDiv">
-    And also this video
+    The above video clearly shows all the wiring and how the Ultrasonic Sensor works without the LCD.
   </div>
 
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4466.jpg" width= 400px alt = 05_Joint>
@@ -65,10 +65,10 @@
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4471.jpg" width= 400px alt = 05_Joint>
 
   <div class="myDiv">
-    Insert Making the Homemade Capicitor sensor Documentation
+    Similar to the capacitor made in class, I also made a capacitor that senses force. Using Copper Tape that is attached to the wires on either side of the foam and the alumnimum foil above the copper tape, The capacitor was made. This capacitor was then attached to an Analog Pin (A0) and a PWM pin (10). Then using the analogRead Function and more formulas, the weight in grams can be measured.
   </div>
 
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep8.png" width= 500px alt = 05_Joint>
+  <img src = "./picsw6w7/IMG-FullCircuit.jpg" width= 500px alt = 05_Joint>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep9.png" width= 500px alt = 05_Joint>
 
   <div class="myDiv">
