--- a/07_E-Output/index.html
+++ b/07_E-Output/index.html
@@ -38,8 +38,11 @@
         <source src="./IMG2_4433.mp4" type=video/mp4>
     </video></div>
     
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep1.png" width= 500px alt = 05_Joint>
-  <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep2.png" width= 500px alt = 05_Joint>
+  
+  <div><video height="500" controls>
+        <source src="./LightRGBLED.mp4" type=video/mp4>
+    </video></div>
+  <img src = "./Schema3.png" width= 500px alt = 05_Joint>
 
   <div class="myDiv">
     Using the Photo Resistor and the RGB LED documentation
@@ -58,7 +61,7 @@
 
   <div class="myDiv">
   Oscilloscope:<br>
-  In this video, the buzzer oscillating every 1000 ms (or 1 second) was vibrating at a speed of 100 Hz as set by the code. THe oscilloscope sjows almost the exact same thing with 100.706 Hz. The buzzer was receiving 0.5 - 1 Volts and had waves where each wavelength was completed in 10 ms.
+  In this video, the buzzer oscillating every 1000 ms (or 1 second) was vibrating at a speed of 100 Hz as set by the code. The oscilloscope shows almost the exact same thing with 100.706 Hz. The buzzer was receiving 0.5 - 1 Volts and had waves where each wavelength was completed in 10 ms.
   </div>
 
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep8.png" width= 500px alt = 05_Joint>
