--- a/06_E-Input/index.html
+++ b/06_E-Input/index.html
@@ -36,6 +36,7 @@
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4391.jpg" width= 400px alt = 06_EINPUT>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4389.jpg" width= 400px alt = 06_EINPUT>
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/06_E-Input/picsw6w7/IMG_4388.jpg" width= 400px alt = 06_EINPUT>
+  <img src = "./IMG-Soap.jpg" width = 500px alt = 06_Soap>
 
   <div class="myDiv">
     For the Ultrasonic Sensor, Both the GND and VCC ports were connected to Ground and 5V pin respectively on the Arduino UNO. The two middle pins of the sensor called "Echo" and "Trig" responsible for the function of the Ultrasonic Sensor.
@@ -72,24 +73,24 @@
   <img src = "https://raw.githubusercontent.com/SaiDBod/PHYS-S12-IntroToDigitalFabrication/main/05_3DPrinting/w5images_3D/JointCADstep9.png" width= 500px alt = 05_Joint>
 
   <div class="myDiv">
-    Add graphs and schematic of (maybe?) everything
+    Actual distance between the ultrasonic sensor and an object is directly proportioanal to the Arduino values it gives. However, the sensor only works best between 20 mm to 2000 mm, under 20 mm and it doesn't function properly, over 2000 mm and it does the same thing
     <br><br>
-    Explain which pins are connected to what
+    The SDA and SCL pins on the Arduino are connected to the SDA and SCL pins of the I2C LCD. The 5 volts was grounded and the buzzer was connected to an analog pin () and PWN pin (11). The rest of the items and wires are from Week 7.
   </div>
 
   </div><br>
 
 
 
-<div class="vidDiv">
+<div class="vidDiv"> 
   <div class="myDiv">
       <h2>What did I learn?</h2><br>
-      <h5> I learned the restrictions of 3D printing and how to use Fusion 360 to print multiple bodies that can move. I also learned when 3D scanning is applicable and when to use, or not use, the tool depending on the size, lighting, and color of the object.</h5><br>
+      <h5> I learned how to make a capacitor and make complex sensor systems. </h5><br>
   </div>
 <br>
   <div class="myDiv">
       <h2>What can I do better next time?</h2><br>
-      <h5>Next time I make a joint, I should fillet the edges for smoother movement. </h5><br>
+      <h5>Next time, I should be more organized with my time and wiring in order to make it easy to understand at a glance. </h5><br>
   </div>
 </div>
 </xmp>
