--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="col-sm-4">
         ![sewing image](./01_intro/sew.png) 
-        [Broken Link]()
+        [Week 8: CNC & Milling](./08_CNCMolding/index.html)
       </div>
       <div class="col-sm-4">
         ![sewing image](./01_intro/sew.png) 
