--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="col-sm-4">
         ![sewing image](./01_intro/sew.png) 
-        [Week 9: Radio, WiFi, and Bluetooth(IoT)](,/09_Radio/index.html)
+        [Week 9: Radio, WiFi, and Bluetooth(IoT)](./09_Radio/index.html)
       </div>
     </div>
   <p style = "font-size: 400px;">This works?</p>
