--- a/final/final_project.html
+++ b/final/final_project.html
@@ -23,6 +23,12 @@
 <xmp style="display:none;">
 <br> 
 
+<div class="vidDiv">
+    <h2>Demo Video:</h2><br>
+    <iframe width="700px" height= 500px src="https://www.youtube.com/embed/v7RBwEGP25M">
+      </iframe>
+</div>
+
 #### Proposals 
 
 <div class="myDiv">
