--- a/final/final_project.html
+++ b/final/final_project.html
@@ -90,10 +90,9 @@
 </div>
 
 <br>
-<h2> July 10th 2023</h2>
 <div class="vidDiv">
     <div class="myDiv">
-        <br><br> <strong>I have decided to go with the remote controlled lawnmower/weedwacker.</strong><br><br> I need multiple sheets of wood, two motors, temporary access to a 3D Printers, temporary access to the Laser Cutter, Arduino Uno, Wifi Chip (or Some way to remotely control an arduino), A larger 3rd motor for the weedwacker mechanism, hot glue gun for small fixes, and two normal wheels with an additional caster wheel for support and movement for the final project. 
+        <br><br> <strong>I have decided to go with the remote controlled lawnmower/weedwacker.</strong><br><br> I need multiple sheets of wood, two motors, temporary access to a 3D Printers, temporary access to the Laser Cutter, two ESPs, A larger 3rd motor for the weedwacker mechanism, hot glue gun for small fixes, and four normal wheels, and a L9110 motor driver  for the final project. 
         <br><br> I will complete this project over 2-3 weeks, using those 2-3 weeks to:<br><br><ol><div style="text-align: left;">
             <li> Make a functional car (most likely based off of Week 3 and 4's assignment)</li>
             <li> Make the car have the ability to turn using two motors</li>
@@ -102,6 +101,17 @@
             <li> Correctly wire electronics and code all the electronics while completing the previous steps</li>
             <li> Add decorations and documentation for each step</li> <html></div></html>
 
+    </div>
+</div><br>
+
+<div class="vidDiv">
+    <img src = "./finalimages/IMG-4644.jpg" width= 700px alt= finalIMG>
+    <div class="myDiv">
+        First sketches were made, making a rectangular lawnmower/weedwacker with a weedwacker attachment at the bottom. Then the electronics are sandwiched between the top and bottom layers of wood with an off switch at the top layer. The lawnmower is controlled by an ESP32 and will receive outside input to function.
+    </div>
+    <img src = "./finalimages/IMG-4656.jpg" width= 700px alt= FinalIMG>
+    <div class="myDiv">
+        Then a few materials needed to be bought, especially a joystick for a controller. So I went to Microcenter to get them.
     </div>
 </div>
 
