--- a/final/final_project.html
+++ b/final/final_project.html
@@ -111,7 +111,12 @@
     </div>
     <img src = "./finalimages/IMG-4656.jpg" width= 700px alt= FinalIMG>
     <div class="myDiv">
-        Then a few materials needed to be bought, especially a joystick for a controller. So I went to Microcenter to get them.
+        Then a few materials needed to be bought, especially a joystick for a controller. So I went to Microcenter to get them. After obtaining materials, the body of the car was built.
+    </div>
+    <img src="./finalimages/IMG-Laser1.png" width= 500px alt= FinalIMG>
+    <img src="./finalimages/IMG-Laser2.png" width= 500px alt= FinalIMG>
+    <div class="myDiv">
+        Using Fusion 360's sketch feature, both the top and both were sketched for laser cutting. The plus symbols are press fit notches that have 3 * 22 mm intersecting rectangles for pillars to insert in. 
     </div>
 </div>
 
