--- a/final/final_project.html
+++ b/final/final_project.html
@@ -116,8 +116,15 @@
     <img src="./finalimages/IMG-Laser1.png" width= 500px alt= FinalIMG>
     <img src="./finalimages/IMG-Laser2.png" width= 500px alt= FinalIMG>
     <div class="myDiv">
-        Using Fusion 360's sketch feature, both the top and both were sketched for laser cutting. The plus symbols are press fit notches that have 3 * 22 mm intersecting rectangles for pillars to insert in. 
+        Using Fusion 360's sketch feature, both the top and both were sketched for laser cutting. The plus symbols are press fit notches that have 3 mm * 22 mm intersecting rectangles for pillars to insert in. <br> Then the .dxf was imported into the Laser Cutter:
     </div>
+    <img src="./finalimages/IMG-4735.jpg" width=400px alt= FinalIMG>
+    <img src="./finalimages/IMG-4737.jpg" width=400px alt= FinalIMG>
+    <img src="./finalimages/IMG-4738.jpg" width=400px alt= FinalIMG>
+    <img src="./finalimages/IMG-4766.jpg" width=400px alt= FinalIMG>
+    <img src="./finalimages/IMG-4767.jpg" width=400px alt= FinalIMG>
+    <img src="./finalimages/IMG-4770.jpg" width=400px alt= FinalIMG>
+
 </div>
 
 </xmp>
