--- a/final/final_project.html
+++ b/final/final_project.html
@@ -124,7 +124,13 @@
     <img src="./finalimages/IMG-4766.jpg" width=400px alt= FinalIMG>
     <img src="./finalimages/IMG-4767.jpg" width=400px alt= FinalIMG>
     <img src="./finalimages/IMG-4770.jpg" width=400px alt= FinalIMG>
-
+    <div class="myDiv">
+        The .dxf files were laser cut and then assembled! But the whole body was only assembled once the wheel mount (shown below) were attached.
+    </div>
+    <iframe src="https://a360.co/43ZcwUn" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe><!-- Thanks Joshua for this code -->
+    <div class="myDiv">
+        Using two extruded rectangles and extruded circles to cut holes for the screw and wheel mounts, both wheel mounts were made. Then a circular guard for the weedwacker motor was also printed. However, a box for the controller was made with wood.
+    </div>
 </div>
 
 </xmp>
