--- a/final/final_project.html
+++ b/final/final_project.html
@@ -131,6 +131,16 @@
     <div class="myDiv">
         Using two extruded rectangles and extruded circles to cut holes for the screw and wheel mounts, both wheel mounts were made. Then a circular guard for the weedwacker motor was also printed. However, a box for the controller was made with wood.
     </div>
+    <iframe src="https://a360.co/3DMIJnq" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
+    <div class="myDiv">
+        Also, for the back wheels, special axles (similar to the concept used in the Kinetic Sculpture project) were made to fit the wheels and stop them from falling or rolling off. A cylinder with a spherical stopper at the end is shown above as the axle that was used.<br><br>And with that the pieces were 3D printed and attached:
+    </div>
+    <img src="./finalimages/IMG-4789.jpg" width=500px>
+    <img src="./finalimages/IMG-4791.jpg" width=500px>
+    <div class="myDiv">
+        While the body was being made, the electronics and coding were also worked on<br><br>
+        So now for <strong>the electronics:</strong>
+    </div>
 </div>
 
 </xmp>
