--- a/final/final_project.html
+++ b/final/final_project.html
@@ -131,6 +131,11 @@
     <div class="myDiv">
         Using two extruded rectangles and extruded circles to cut holes for the screw and wheel mounts, both wheel mounts were made. Then a circular guard for the weedwacker motor was also printed. However, a box for the controller was made with wood.
     </div>
+    <img src="./finalimages/IMG-4782.jpg" width=500px alt= FinalIMG>
+    <img src="./finalimages/IMG-4784.jpg" width=500px alt= FinalIMG>
+    <div class="myDiv">
+        The file was then 3D printed, and by using a soldering iron and a hammer, the screw implants were placed inside the wheel mounts
+    </div>
     <iframe src="https://a360.co/3DMIJnq" width="800" height="600" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
     <div class="myDiv">
         Also, for the back wheels, special axles (similar to the concept used in the Kinetic Sculpture project) were made to fit the wheels and stop them from falling or rolling off. A cylinder with a spherical stopper at the end is shown above as the axle that was used.<br><br>And with that the pieces were 3D printed and attached:
@@ -403,6 +408,13 @@ void loop() {
         <source src="./finalimages/IMG-4732.mp4" type=video/mp4>
     </video></div>
 </div>
+</div><br>
+
+<div class="vidDiv">
+    <div class="myDiv">
+        With both electronics and body finished, the final product is almost ready. Using wood glue, Super glue, screws, and more wood, the product was assembled.
+    </div>
+    <img src="./finalimages.IMG-4838.jpg" width= 500px>
 </div>
 
 </xmp>
