--- a/final/final_project.html
+++ b/final/final_project.html
@@ -412,9 +412,15 @@ void loop() {
 
 <div class="vidDiv">
     <div class="myDiv">
-        With both electronics and body finished, the final product is almost ready. Using wood glue, Super glue, screws, and more wood, the product was assembled.
+        With both electronics and body finished, the final product is almost ready. Using wood glue, super glue, screws, and more wood, the product was assembled.
     </div>
-    <img src="./finalimages.IMG-4838.jpg" width= 500px>
+    <img src="./finalimages/IMG-4838.jpg" width= 500px>
+    <div class="myDiv">
+        Here are some videos of the lawnmower working:
+    </div>
+    <iframe src="https://drive.google.com/file/d/1VPO-ojQz1KEWd810IhBjqalT3bnl3tEE/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/1IhlD_cHaCWo27yTLbO5xlpi-Yw3JAnx6/preview" width="640" height="480" allow="autoplay"></iframe>
+    <iframe src="https://drive.google.com/file/d/1gt3T7x5v26gqJSMjVogGYAmLHt3s_RA4/preview" width="640" height="480" allow="autoplay"></iframe>
 </div>
 
 </xmp>
